# Encode-Hackathon-April-2025

./: .gitignore  README.md  docker-compose.yml  package-lock.json  start.sh
Hackaton Presentation/: VIDEO_SUBMISSION.txt
_working_directory/: TASKS.md  TEAM.md  rules.mcp
_working_directory/solana-contract/: README.md  id.json  lib.rs
api_endpoints/: main.py  news_summarizer.py  story_gen.py  translator.py
backend/: README.md  api_keys.db  requirements.txt  transactions.db
backend/app/: main.py
backend/app/api/: Dockerfile  README.md  api_gateway.py  requirements.txt  run_gateway.py
backend/app/auth/: Dockerfile  README.md  __init__.py  auth.py  auth_db.json
backend/app/data/: dummy_data.py
backend/app/external_apis/: __init__.py  base.py  news_summarizer.py  story_gen.py  translator.py
backend/app/models/: models.py
backend/app/proxy/: proxy.py
backend/app/services/: __init__.py  api_key_manager.py  api_router.py  database.py  news_summarizer.py  session_manager.py  (+2 more)
cursor/: TEAM.md
frontend/: Dockerfile  README-PWA.md  README.md  TASKS.OLDmd  TASKS.md  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json  service-worker.js  sw.js
news_summariser/: main.py  requirements.txt
solana-contract/: README.md  aiagentmarket.js
solana-contract/aiagentmarket/: Anchor.toml  package.json
solana-contract/aiagentmarket/programs/aiagentmarket/: Cargo.toml
web3/: cli-install.md  contract.rs  requirements.md
web3/client/: client.ts  idl.js  package-lock.json  program_id.md
(+43 files in other folders)
